--- a/app/scripts/directives/dashboard/stats/stats.html
+++ b/app/scripts/directives/dashboard/stats/stats.html
@@ -5,9 +5,9 @@
                 <div class="col-xs-3">
                     <i class="fa fa-{{type}} fa-5x"></i>
                 </div>
-                <div class="col-xs-9 text-right">
+                <div class="col-xs-9 text-right text-big">
                     <div class="huge">{{number}}</div>
-                    <div>{{comments}}</div>
+                    <h2>{{comments}}</h2>
                 </div>
             </div>
         </div>
