--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -2,9 +2,28 @@
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav in" id="side-menu">
             <sidebar-search></sidebar-search>
-            <!-- 原先範本-->
+            <!-- 新增 -->
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.control"><i class="fa fa-refresh fa-fw"></i> 手動控制</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.iControl"><i class="fa fa-tasks fa-fw"></i> 智慧控制</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.modeChange"><i class="fa fa-university fa-fw"></i> 情境模式</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.Setting"><i class="fa fa-cog fa-fw"></i> 系統設定</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.ECOStatistic"><i class="fa fa-bar-chart-o fa-fw"></i> 耗能統計</a>
+            </li>
+            <!-- 原先範本-->
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> ____Dashboard</a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
