--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -6,8 +6,30 @@
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
-            <li ui-sref-active="active">
-                <a ui-sref="dashboard.control"><i class="fa fa-refresh fa-fw"></i> 手動控制</a>
+            <li ng-class="{active: collapseVar==1}">{{dropDown}}
+                <a href="" ng-click="check(1)"><i class="fa fa-refresh fa-fw"></i> 手動控制<span
+                        class="fa arrow"></span></a>
+                <ul class="nav nav-second-level" collapse="collapseVar!=1">
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.roomLiving">客廳</a>
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.roomBedMain">主臥房</a>
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.roomBedGuest">客房</a>
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.roomBath">浴室</a>
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.roomKitchen"> 廚房</a>
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.roomAdd">新增</a>
+                    </li>
+                </ul>
+                <!-- /.nav-second-level -->
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.iControl"><i class="fa fa-tasks fa-fw"></i> 智慧控制</a>
@@ -34,10 +56,10 @@
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
             </li>
-            <li ng-class="{active: collapseVar==1}">{{dropDown}}
-                <a href="" ng-click="check(1)"><i class="fa fa-wrench fa-fw"></i> UI Elements<span
+            <li ng-class="{active: collapseVar==3}">{{dropDown}}
+                <a href="" ng-click="check(3)"><i class="fa fa-wrench fa-fw"></i> UI Elements<span
                         class="fa arrow"></span></a>
-                <ul class="nav nav-second-level" collapse="collapseVar!=1">
+                <ul class="nav nav-second-level" collapse="collapseVar!=3">
                     <li ui-sref-active="active">
                         <a ui-sref="dashboard.panels-wells">Panels and Wells</a>
                     </li>
