--- a/pages/roomCurrentStat.html
+++ b/pages/roomCurrentStat.html
@@ -18,6 +18,8 @@
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- Morris Charts CSS -->
+    <link href="../bower_components/morrisjs/morris.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -97,78 +99,119 @@
             <!-- /.navbar-static-side -->
         </nav>
         <div id="page-wrapper">
+            <div class="page-header">
+                <h1> 智能統計! <small>耗電統計</small> </h1>
+                <h1></h1>
+            </div>
             <div class="row">
                 <div class="col-md-12">
-                    <div class="page-header">
-                        <h1> 智能統計! <small>耗電統計</small> </h1>
-                        <h1></h1>
+                    <div class="panel panel-green">
+                        <div class="panel-heading">
+                            節點耗電統計
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="dataTable_wrapper">
+                                <table class="table table-striped table-bordered table-hover" id="tableCurrentStatus">
+                                    <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>類型</th>
+                                            <th>應用</th>
+                                            <th>位置</th>
+                                            <th>狀態</th>
+                                            <th>電流</th>
+                                            <th>耗能(kW/h)</th>
+                                            <th>預估電費(天)</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr class="odd gradeX">
+                                            <td>1</td>
+                                            <td>N</td>
+                                            <td>Light</td>
+                                            <td>主臥室</td>
+                                            <td class="center">0</td>
+                                            <td class="center">0</td>
+                                            <td>5</td>
+                                            <td>22</td>
+                                        </tr>
+                                        <tr class="even gradeC">
+                                            <td>1</td>
+                                            <td>N</td>
+                                            <td>Fan</td>
+                                            <td>主臥室</td>
+                                            <td class="center">0</td>
+                                            <td>5</td>
+                                            <td>5</td>
+                                            <td>22</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.table-responsive -->
+                        </div>
+                        <!-- /.panel-body -->
                     </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="panel panel-green">
-                                <div class="panel-heading">
-                                    節點耗電統計
-                                </div>
-                                <!-- /.panel-heading -->
-                                <div class="panel-body">
-                                    <div class="dataTable_wrapper">
-                                        <table class="table table-striped table-bordered table-hover" id="tableCurrentStatus">
-                                            <thead>
-                                                <tr>
-                                                    <th>ID</th>
-                                                    <th>類型</th>
-                                                    <th>應用</th>
-                                                    <th>位置</th>
-                                                    <th>狀態</th>
-                                                    <th>電流</th>
-                                                    <th>耗能(kW/h)</th>
-                                                    <th>預估電費(天)</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr class="odd gradeX">
-                                                    <td>1</td>
-                                                    <td>N</td>
-                                                    <td>Light</td>
-                                                    <td>主臥室</td>
-                                                    <td class="center">0</td>
-                                                    <td class="center">0</td>
-                                                    <td>5</td>
-                                                    <td>22</td>
-                                                </tr>
-                                                <tr class="even gradeC">
-                                                    <td>1</td>
-                                                    <td>N</td>
-                                                    <td>Fan</td>
-                                                    <td>主臥室</td>
-                                                    <td class="center">0</td>
-                                                    <td>5</td>
-                                                    <td>5</td>
-                                                    <td>22</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    <!-- /.table-responsive -->
-                                </div>
-                                <!-- /.panel-body -->
+                </div>
+                <div class="col-md-12">
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            電能與電費統計
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="dataTable_wrapper">
+                            </div>
+                            <!-- /.table-responsive -->
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            耗電量年資料
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="flot-chart">
+                                <div class="flot-chart-content" id="Year-bar-chart"></div>
                             </div>
                         </div>
-                        <div class="col-md-12">
-                            <div class="panel panel-info">
-                                <div class="panel-heading">
-                                    電能與電費統計
-                                </div>
-                                <!-- /.panel-heading -->
-                                <div class="panel-body">
-                                    <div class="dataTable_wrapper">
-                                    </div>
-                                    <!-- /.table-responsive -->
-                                </div>
-                                <!-- /.panel-body -->
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->
+                </div>
+                <div class="col-lg-6">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            耗電量月資料
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="flot-chart">
+                                <div class="flot-chart-content" id="Month-bar-chart"></div>
                             </div>
                         </div>
+                        <!-- /.panel-body -->
                     </div>
+                    <!-- /.panel -->
+                </div>
+                <div class="col-lg-6">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            耗電量日資料
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="flot-chart">
+                                <div class="flot-chart-content" id="Day-bar-chart"></div>
+                            </div>
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->
                 </div>
             </div>
             <!-- /#page-wrapper -->
@@ -191,11 +234,19 @@
     <!-- DataTables JavaScript -->
     <script src="../bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="../bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.min.js"></script>
-    <!--    ScheduleControl time-picker date-picker -->
+    <!-- ScheduleControl time-picker date-picker -->
     <script src="../js/ScheduleControl.js"></script>
     <script src="../bower_components/jquery-ui/jquery-ui.min.js"></script>
     <script src="../bower_components/jquery-ui/ui/i18n/datepicker-zh-TW.js"></script>
     <script src="../bower_components/jquery-timepicker/jquery.ui.timepicker.js"></script>
+    <!-- Flot Charts JavaScript -->
+    <script src="../bower_components/flot/excanvas.min.js"></script>
+    <script src="../bower_components/flot/jquery.flot.js"></script>
+    <script src="../bower_components/flot/jquery.flot.pie.js"></script>
+    <script src="../bower_components/flot/jquery.flot.resize.js"></script>
+    <script src="../bower_components/flot/jquery.flot.time.js"></script>
+    <script src="../bower_components/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
+    <script src="../js/CurrentStatusRead.js"></script>
 </body>
 
 </html>
