--- a/pages/roomSchedule.html
+++ b/pages/roomSchedule.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
@@ -53,9 +52,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">SmartHome</a>
-
             </div>
-    
             <!-- /.navbar-header -->
             <!-- /.navbar-top-links -->
             <div class="navbar-default sidebar" role="navigation">
@@ -96,7 +93,7 @@
                         <li>
                             <a href="roomSchedule.html"><i class="fa fa-tasks fa-fw"></i> 智慧控制</a>
                         </li>
-                    <!--     <li>
+                        <!--     <li>
                             <a href="roomSchedule.html"><i class="fa fa-university fa-fw"></i> 情境模式</a>
                         </li> -->
                         <li>
@@ -155,6 +152,10 @@
                                         </tr>
                                     </tbody>
                                 </table>
+                                <p></p>
+                                <button type="button" class="btn btn-danger" id="btnDelete  Schedule">
+                                    刪除排程
+                                </button>
                             </div>
                             <!-- /.table-responsive -->
                         </div>
@@ -295,7 +296,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h1></h1>
-                    <button type="button" class="btn btn-lg btn-success" id = "btnSubmitSchedule">
+                    <button type="button" class="btn btn-lg btn-success" id="btnSubmitSchedule">
                         確認送出
                     </button>
                 </div>
@@ -328,7 +329,6 @@
     <!-- toggle button -->
     <script src="../bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
     <!-- restful -->
-   
     <!-- test date time picker http://www.jqueryscript.net/time-clock/Pretty-Date-Time-Picker-Plugin-For-Bootstrap-Material.html-->
     <!-- 
     <script src="../bower_components/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js"></script>
