--- a/pages/roomEnvironment.html
+++ b/pages/roomEnvironment.html
@@ -164,7 +164,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#">
+                        <a id="btnEnvOutDoor">
                             <div class="panel-footer">
                                 <span class="pull-left">開啟</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -186,7 +186,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#">
+                        <a id="btnEnvProtect">
                             <div class="panel-footer">
                                 <span class="pull-left">開啟</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -208,7 +208,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#">
+                        <a id="btnEnvSleep">
                             <div class="panel-footer">
                                 <span class="pull-left">開啟</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
