--- a/pages/roomSetting.html
+++ b/pages/roomSetting.html
@@ -98,37 +98,50 @@
             </div>
             <!-- /.navbar-static-side -->
         </nav>
-     
-        <!-- /#wrapper -->
-        <!-- jQuery -->
-        <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-        <!-- Bootstrap Core JavaScript -->
-        <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <!-- Metis Menu Plugin JavaScript -->
-        <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
-        <!-- Morris Charts JavaScript -->
-        <script src="../bower_components/raphael/raphael-min.js"></script>
-        <script src="../bower_components/morrisjs/morris.min.js"></script>
-        <!-- Custom Theme JavaScript -->
-        <script src="../dist/js/sb-admin-2.js"></script>
-        <script src="../js/RestControl.js"></script>
-        <!-- DataTables JavaScript -->
-        <script src="../bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
-        <script src="../bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.min.js"></script>
-        <!-- ScheduleControl time-picker date-picker -->
-        <script src="../js/ScheduleControl.js"></script>
-        <script src="../bower_components/jquery-ui/jquery-ui.min.js"></script>
-        <script src="../bower_components/jquery-ui/ui/i18n/datepicker-zh-TW.js"></script>
-        <script src="../bower_components/jquery-timepicker/jquery.ui.timepicker.js"></script>
-        <!-- Flot Charts JavaScript -->
-        <script src="../bower_components/flot/excanvas.min.js"></script>
-        <script src="../bower_components/flot/jquery.flot.js"></script>
-        <script src="../bower_components/flot/jquery.flot.pie.js"></script>
-        <script src="../bower_components/flot/jquery.flot.resize.js"></script>
-        <script src="../bower_components/flot/jquery.flot.time.js"></script>
-        <script src="../bower_components/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
-        <script src="../js/CurrentStatusRead.js"></script>
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">系統設定</h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+             <div class="row">
+                <div class="col-lg-12">
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+        </div>
+        <!-- /#page-wrapper -->
+    </div>
+    <!-- /#wrapper -->
+    <!-- jQuery -->
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
+    <!-- Morris Charts JavaScript -->
+    <script src="../bower_components/raphael/raphael-min.js"></script>
+    <script src="../bower_components/morrisjs/morris.min.js"></script>
+    <!-- Custom Theme JavaScript -->
+    <script src="../dist/js/sb-admin-2.js"></script>
+    <script src="../js/RestControl.js"></script>
+    <!-- DataTables JavaScript -->
+    <script src="../bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
+    <script src="../bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.min.js"></script>
+    <!-- ScheduleControl time-picker date-picker -->
+    <script src="../js/ScheduleControl.js"></script>
+    <script src="../bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <script src="../bower_components/jquery-ui/ui/i18n/datepicker-zh-TW.js"></script>
+    <script src="../bower_components/jquery-timepicker/jquery.ui.timepicker.js"></script>
+    <!-- Flot Charts JavaScript -->
+    <script src="../bower_components/flot/excanvas.min.js"></script>
+    <script src="../bower_components/flot/jquery.flot.js"></script>
+    <script src="../bower_components/flot/jquery.flot.pie.js"></script>
+    <script src="../bower_components/flot/jquery.flot.resize.js"></script>
+    <script src="../bower_components/flot/jquery.flot.time.js"></script>
+    <script src="../bower_components/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
+    <script src="../js/CurrentStatusRead.js"></script>
 </body>
 
 </html>
-
