control with table

--- a/pages/roomEnvironment.html
+++ b/pages/roomEnvironment.html
@@ -237,6 +237,7 @@
     <script src="../js/morris-data.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
+    <script src="../js/js/sb-admin-2.js"></script>
 </body>
 
 </html>
