--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -87,7 +87,7 @@
                         <li>
                             <a href="roomSchedule.html"><i class="fa fa-tasks fa-fw"></i> 智慧控制</a>
                         </li>
-                            <li>
+                        <li>
                             <a href="roomEnvironment.html"><i class="fa fa-university fa-fw"></i> 情境模式</a>
                         </li>
                         <li>
@@ -144,7 +144,7 @@
                                 <div class="tab-pane fade in active" id="home-pills">
                                     <h4>電器控制</h4>
                                     <div class="row">
-                                        <div class="col-lg-3 col-md-6">
+                                        <!--   <div class="col-lg-3 col-md-6">
                                             <div class="panel panel-default panel-outline">
                                                 <div class="panel-heading">
                                                     <div class="row">
@@ -215,8 +215,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="col-lg-3 col-md-6">
+                                        </div> -->
+                                        <!--  <div class="col-lg-3 col-md-6">
                                             <p>
                                                 <button class="btn btn-default btn-outline" id="btnMainLight">
                                                     <i class="fa fa-lightbulb-o fa-3x pull-left"></i>台燈</button>
@@ -234,16 +234,141 @@
                                                 <i class="fa  fa-flag-o fa-5x pull-left"></i>主燈2</a>
                                             <a class="btn btn-large btn-danger btn-outline" id="btnCurtain3">
                                                 <i class="fa  fa-flag-o fa-5x pull-left"></i>主燈3</a>
+                                        </div> -->
+                                        <div class="col-md-12">
+                                            <table class="table table-striped table-bordered table-hover" id="tableLivingControl">
+                                                <thead>
+                                                    <tr>
+                                                        <!--   <th>ID</th>
+                                                        <th>類型</th> -->
+                                                        <th>應用</th>
+                                                        <th>控制</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr class="odd gradeX">
+                                                        <!--      <td>1</td>
+                                                        <td>N</td> -->
+                                                        <td>台燈</td>
+                                                        <td>
+                                                            <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnMainLight">
+                                                        </td>
+                                                    </tr>
+                                                    <tr class="odd gradeX">
+                                                        <!--  <td>1</td>
+                                                        <td>N</td> -->
+                                                        <td>電風扇</td>
+                                                        <td>
+                                                            <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnWallLight">
+                                                        </td>
+                                                    </tr>
+                                                    </tr>
+                                                    <tr class="odd gradeX">
+                                                        <!--  <td>1</td>
+                                                        <td>N</td> -->
+                                                        <td>微波爐</td>
+                                                        <td>
+                                                            <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnFan">
+                                                        </td>
+                                                    </tr>
+                                                    <tr class="even gradeC">
+                                                        <!--    <td>1</td>
+                                                        <td>P</td> -->
+                                                        <td>檯燈</td>
+                                                        <td>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnCurtain1"> 檯燈1</label>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnCurtain2"> 檯燈2</label>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnCurtain3"> 檯燈3</label>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
                                         </div>
                                     </div>
                                     <p></p>
                                 </div>
                                 <div class="tab-pane fade" id="profile-pills">
                                     <h4>電視控制</h4>
+                                    <table class="table table-striped table-bordered table-hover" id="tableLivingControl">
+                                        <thead>
+                                            <tr>
+                                                <!--   <th>ID</th>
+                                                        <th>類型</th> -->
+                                                <th>應用</th>
+                                                <th>控制</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="even gradeC">
+                                                <!--    <td>1</td>
+                                                        <td>P</td> -->
+                                                <td>開關</td>
+                                                <td>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-power-off fa-3x pull-left"></i>開關</a>
+                                                </td>
+                                            </tr>
+                                            <tr class="even gradeC">
+                                                <!--    <td>1</td>
+                                                        <td>P</td> -->
+                                                <td>功能</td>
+                                                <td>
+                                                    <a class="btn btn-large btn-default" id="btnTVUP">
+                                                        <i class="fa fa-chevron-circle-left fa-3x pull-left"></i>向上轉台</a>
+                                                    <a class="btn btn-large btn-default" href="#">
+                                                        <i class="fa  fa-chevron-circle-right fa-3x pull-left"></i>向下轉台</a>
+                                                    <a class="btn btn-large btn-default " href="#">
+                                                        <i class="fa fa-volume-up  fa-3x pull-left"></i>增加音量</a>
+                                                    <a class="btn btn-large btn-default" href="#">
+                                                        <i class="fa fa-volume-down fa-3x pull-left"></i>減低音量</a>
+                                                </td>
+                                            </tr>
+                                            <tr class="even gradeC">
+                                                <!--    <td>1</td>
+                                                        <td>P</td> -->
+                                                <td>頻道選擇</td>
+                                                <td>
+                                                    <div class="row">
+                                                        <div class="col-md-12">
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">1</i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">2</i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">3</i>
+                                                            </button>
+                                                        </div>
+                                                        <div class="col-md-12">
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">4</i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">5</i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">6</i>
+                                                            </button>
+                                                        </div>
+                                                        <div class="col-md-12">
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">7</i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">8</i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">9</i>
+                                                            </button>
+                                                        </div>
+                                                        <div class="col-md-12">
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">0</i>
+                                                            </button>
+                                                            <a class="btn btn-large btn-default" href="#">
+                                                                <i class="fa fa-check fa-3x pull-left"></i>確認</a>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                     <div class="row ">
                                         <div class="col-md-6">
-                                            <a class="btn btn-large btn-default " id="btnTVON">
-                                                <i class="fa fa-power-off fa-3x pull-left"></i>開關</a>
                                             <a class="btn btn-large btn-default" id="btnTVMute">
                                                 <i class="fa fa-microphone-slash fa-3x pull-left"></i>靜音</a>
                                             <a class="btn btn-large btn-default" id="btnTVUP">
