--- a/pages/roomEnvironment.html
+++ b/pages/roomEnvironment.html
@@ -236,8 +236,8 @@
     <script src="../bower_components/morrisjs/morris.min.js"></script>
     <script src="../js/morris-data.js"></script>
     <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
-    <script src="../js/js/sb-admin-2.js"></script>
+    <script src="../dist/js/sb-admin-2.js"></script> 
+    <script src="../js/EnvControl.js"></script>
 </body>
 
 </html>
