--- a/pages/roomCurrentStat.html
+++ b/pages/roomCurrentStat.html
@@ -126,34 +126,26 @@
                                     <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>類型</th>
                                             <th>應用</th>
                                             <th>位置</th>
                                             <th>狀態</th>
-                                            <th>電流</th>
-                                            <th>耗能(kW/h)</th>
-                                            <th>預估電費(天)</th>
+                                            <th>預估電費NTD(本日)</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr class="odd gradeX">
                                             <td>1</td>
-                                            <td>N</td>
-                                            <td>Light</td>
-                                            <td>主臥室</td>
-                                            <td class="center">0</td>
-                                            <td class="center">0</td>
-                                            <td>5</td>
-                                            <td>22</td>
+                                           
+                                            <td>主燈</td>
+                                            <td>客廳</td>
+                                            <td>0</td>
+                                            <td>10</td>
                                         </tr>
                                         <tr class="even gradeC">
                                             <td>1</td>
-                                            <td>N</td>
-                                            <td>Fan</td>
+                                            <td>電風扇</td>
                                             <td>主臥室</td>
-                                            <td class="center">0</td>
-                                            <td>5</td>
-                                            <td>5</td>
+                                            <td>0</td>
                                             <td>22</td>
                                         </tr>
                                     </tbody>
