--- a/pages/roomCurrentStat.html
+++ b/pages/roomCurrentStat.html
@@ -122,7 +122,7 @@
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div class="dataTable_wrapper">
-                                <table class="table table-striped table-bordered table-hover" id="tableCurrentStatus">
+                                <table class="table table-striped table-bordered table-hover" id="tableNodeStatus">
                                     <thead>
                                         <tr>
                                             <th>ID</th>
