--- a/pages/roomSchedule.html
+++ b/pages/roomSchedule.html
@@ -88,7 +88,7 @@
                             <a href="roomSchedule.html"><i class="fa fa-tasks fa-fw"></i> 智慧控制</a>
                         </li>
                             <li>
-                            <a href="roomSchedule.html"><i class="fa fa-university fa-fw"></i> 情境模式</a>
+                            <a href="roomEnvironment.html"><i class="fa fa-university fa-fw"></i> 情境模式</a>
                         </li>
                         <li>
                             <a href="roomCurrentStat.html"><i class="fa fa-bar-chart-o fa-fw"></i> 耗能統計</a>
