--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -218,11 +218,11 @@
                                                 <td>
                                                     <a class="btn btn-large btn-default " id="btnTVON">
                                                         <i class="fa fa-power-off fa-3x pull-left"></i>開關</a>
-                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                    <a class="btn btn-large btn-default " id="btnMenu">
                                                         <i class="fa fa-home fa-3x pull-left"></i>主選單</a>
-                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                    <a class="btn btn-large btn-default " id="btnTVEXIT">
                                                         <i class="fa fa-reply fa-3x pull-left"></i>跳出</a>
-                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                    <a class="btn btn-large btn-default " id="btnTVStop">
                                                         <i class="fa fa-stop fa-3x pull-left"></i>靜止</a>
                                                 </td>
                                             </tr>
@@ -231,15 +231,15 @@
                                                         <td>P</td> -->
                                                 <td>功能</td>
                                                 <td>
-                                                    <a class="btn btn-large btn-default" id="btnTVUP">
+                                                    <a class="btn btn-large btn-default" id="btnTVChannelUp">
                                                         <i class="fa fa-chevron-circle-left fa-3x pull-left"></i>向上轉台</a>
-                                                    <a class="btn btn-large btn-default" href="#">
+                                                    <a class="btn btn-large btn-default" id="btnTVChannelDown">
                                                         <i class="fa  fa-chevron-circle-right fa-3x pull-left"></i>向下轉台</a>
-                                                    <a class="btn btn-large btn-default " href="#">
+                                                    <a class="btn btn-large btn-default " id="btnTVVoiceUp">
                                                         <i class="fa fa-volume-up  fa-3x pull-left"></i>增加音量</a>
-                                                    <a class="btn btn-large btn-default" href="#">
+                                                    <a class="btn btn-large btn-default" id="btnTVVoiceDown">
                                                         <i class="fa fa-volume-down fa-3x pull-left"></i>減低音量</a>
-                                                    <a class="btn btn-large btn-default" href="#">
+                                                    <a class="btn btn-large btn-default" id="btnTVMute">
                                                         <i class="fa fa-microphone-slash fa-3x pull-left"></i>靜音</a>
                                                 </td>
                                             </tr>
@@ -250,33 +250,33 @@
                                                 <td>
                                                     <div class="row">
                                                         <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">1</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV1"><i class="fa">1</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">2</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV2"><i class="fa">2</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">3</i>
-                                                            </button>
-                                                        </div>
-                                                        <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">4</i>
-                                                            </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">5</i>
-                                                            </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">6</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV3"><i class="fa">3</i>
                                                             </button>
                                                         </div>
                                                         <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">7</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV4"><i class="fa">4</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">8</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV5"><i class="fa">5</i>
                                                             </button>
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">9</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV6"><i class="fa">6</i>
                                                             </button>
                                                         </div>
                                                         <div class="col-md-12">
-                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa">0</i>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV7"><i class="fa">7</i>
                                                             </button>
-                                                            <a class="btn btn-large btn-default" href="#">
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;"><i class="fa" id="btnTV8">8</i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV9"><i class="fa">9</i>
+                                                            </button>
+                                                        </div>
+                                                        <div class="col-md-12">
+                                                            <button type="button" class="btn btn-default btn-circle btn-xl" style="margin: 2px;" id="btnTV0"><i class="fa">0</i>
+                                                            </button>
+                                                            <a class="btn btn-large btn-default" id="btnTVEnter">
                                                                 <i class="fa fa-check fa-3x pull-left"></i>確認</a>
                                                         </div>
                                                     </div>
@@ -288,7 +288,7 @@
                                                 <td>速度控制</td>
                                                 <td>
                                                     <a class="btn btn-large btn-default" id="btnTVUP">
-                                                        <i class="fa  fa-fast-backward fa-3x pull-left"></i>兩倍倒帶</a>
+                                                        <i class="fa  fa-fast-backward fa-3x pull-left" id="btnTV2Back"></i>兩倍倒帶</a>
                                                     <a class="btn btn-large btn-default" href="#">
                                                         <i class="fa fa-backward fa-3x pull-left">
                                                             
@@ -395,9 +395,6 @@
     <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- Metis Menu Plugin JavaScript -->
     <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
-    <!-- Morris Charts JavaScript -->
-    <script src="../bower_components/raphael/raphael-min.js"></script>
-    <script src="../bower_components/morrisjs/morris.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
     <script src="../dist/js/JqueryREST.min.js"></script>
