--- a/pages/roomSchedule.html
+++ b/pages/roomSchedule.html
@@ -95,9 +95,9 @@
                         </li>
                         <li>
                         </li>
-                        <li>
-                            <a href="roomSchedule.html"><i class="fa fa-cog fa-fw"></i> 系統設定</a>
-                        </li>
+                   <!--      <li>
+                            <a href="roomSetting.html"><i class="fa fa-cog fa-fw"></i> 系統設定</a>
+                        </li> -->
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
