情境模式 整張圖可按

--- a/pages/roomEnvironment.html
+++ b/pages/roomEnvironment.html
@@ -87,7 +87,7 @@
                         </li>
                         <li>
                         </li>
-                      <!--   <li>
+                        <!--   <li>
                             <a href="roomSetting.html"><i class="fa fa-cog fa-fw"></i> 系統設定</a>
                         </li> -->
                     </ul>
@@ -150,7 +150,7 @@
                     </div>
                 </div> -->
                 <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-success">
+                    <div class="panel panel-success" id="btnEnvOutDoor">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
@@ -162,7 +162,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a id="btnEnvOutDoor">
+                        <a>
                             <div class="panel-footer">
                                 <span class="pull-left">開啟</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-info">
+                    <div class="panel panel-info" id="btnEnvProtect">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
@@ -184,7 +184,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a id="btnEnvProtect">
+                        <a>
                             <div class="panel-footer">
                                 <span class="pull-left">開啟</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -194,7 +194,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-red">
+                    <div class="panel panel-red" id="btnEnvSleep">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a id="btnEnvSleep">
+                        <a>
                             <div class="panel-footer">
                                 <span class="pull-left">開啟</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -215,9 +215,7 @@
                         </a>
                     </div>
                 </div>
-             
             </div>
-           
             <!-- /.row -->
         </div>
         <!-- /#page-wrapper -->
@@ -230,7 +228,7 @@
     <!-- Metis Menu Plugin JavaScript -->
     <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script> 
+    <script src="../dist/js/sb-admin-2.js"></script>
     <script src="../js/EnvControl.js"></script>
 </body>
 
