--- a/pages/index.html
+++ b/pages/index.html
@@ -89,7 +89,7 @@
                         </li>
                         <li>
                         </li>
-              <!--           <li>
+                        <!--           <li>
                             <a href="roomSetting.html"><i class="fa fa-cog fa-fw"></i> 系統設定</a>
                         </li> -->
                     </ul>
@@ -263,8 +263,8 @@
                         </a>
                     </div>
                 </div> -->
-               <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-success">
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-success" id="btnEnvOutDoor">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
@@ -276,7 +276,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a id="btnEnvOutDoor">
+                        <a>
                             <div class="panel-footer">
                                 <span class="pull-left">開啟</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -341,10 +341,6 @@
     <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- Metis Menu Plugin JavaScript -->
     <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
-    <!-- Morris Charts JavaScript -->
-    <script src="../bower_components/raphael/raphael-min.js"></script>
-    <script src="../bower_components/morrisjs/morris.min.js"></script>
-    <script src="../js/morris-data.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
     <script src="../js/EnvControl.js"></script>
