新增S/L node配對顯示

--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -95,7 +95,7 @@
                         </li>
                         <li>
                         </li>
-                       <!--  <li>
+                        <!--  <li>
                             <a href="roomSetting.html"><i class="fa fa-cog fa-fw"></i> 系統設定</a>
                         </li> -->
                     </ul>
@@ -119,9 +119,7 @@
                             </picture>
                         </div>
                     </div>
-         
                 </div>
-
                 <div class="row">
                     <div class="panel panel-info">
                         <div class="panel-heading">
@@ -192,6 +190,32 @@
                                                                 <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnCurtain2"> 檯燈2</label>
                                                             <label class="checkbox">
                                                                 <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnCurtain3"> 檯燈3</label>
+                                                        </td>
+                                                    </tr>
+                                                    <tr class="odd gradeX">
+                                                        <!--  <td>1</td>
+                                                        <td>N</td> -->
+                                                        <td>床頭 開關檯燈</td>
+                                                        <td>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain1" disabled> 檯燈1狀態</label>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain2" disabled> 檯燈2狀態</label>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain3" disabled> 檯燈3狀態</label>
+                                                        </td>
+                                                    </tr>
+                                                    <tr class="odd gradeX">
+                                                        <!--  <td>1</td>
+                                                        <td>N</td> -->
+                                                        <td>門口 開關檯燈</td>
+                                                        <td>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain1" disabled> 檯燈1狀態</label>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain2" disabled> 檯燈2狀態</label>
+                                                            <label class="checkbox">
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain3" disabled> 檯燈3狀態</label>
                                                         </td>
                                                     </tr>
                                                 </tbody>
