--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -198,11 +198,11 @@
                                                         <td>床頭 開關檯燈</td>
                                                         <td>
                                                             <label class="checkbox">
-                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain1" disabled> 檯燈1狀態</label>
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain11" > 檯燈1狀態</label>
                                                             <label class="checkbox">
-                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain2" disabled> 檯燈2狀態</label>
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain21" > 檯燈2狀態</label>
                                                             <label class="checkbox">
-                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain3" disabled> 檯燈3狀態</label>
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain31"> 檯燈3狀態</label>
                                                         </td>
                                                     </tr>
                                                     <tr class="odd gradeX">
@@ -211,11 +211,11 @@
                                                         <td>門口 開關檯燈</td>
                                                         <td>
                                                             <label class="checkbox">
-                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain1" disabled> 檯燈1狀態</label>
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain12" > 檯燈1狀態</label>
                                                             <label class="checkbox">
-                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain2" disabled> 檯燈2狀態</label>
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain22" > 檯燈2狀態</label>
                                                             <label class="checkbox">
-                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain3" disabled> 檯燈3狀態</label>
+                                                                <input checked data-toggle="toggle" type="checkbox" data-onstyle="warning" id="btnCurtain32" > 檯燈3狀態</label>
                                                         </td>
                                                     </tr>
                                                 </tbody>
